k8s/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kanban-vision-svc
  namespace: kanban-vision
  labels:
    app.kubernetes.io/name: kanban-vision-api
spec:
  selector:
    app.kubernetes.io/name: kanban-vision-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
